--- a/noob-pwa/package.json
+++ b/noob-pwa/package.json
@@ -7,7 +7,8 @@
     "react-dom": "^15.6.1"
   },
   "devDependencies": {
-    "react-scripts": "1.0.7"
+    "react-scripts": "1.0.7",
+    "bulma": "0.4.2"
   },
   "scripts": {
     "start": "react-scripts start",
