--- a/noob-pwa/package.json
+++ b/noob-pwa/package.json
@@ -4,11 +4,11 @@
   "private": true,
   "dependencies": {
     "react": "^15.6.1",
-    "react-dom": "^15.6.1"
+    "react-dom": "^15.6.1",
+    "bulma": "0.4.2"
   },
   "devDependencies": {
-    "react-scripts": "1.0.7",
-    "bulma": "0.4.2"
+    "react-scripts": "1.0.7"
   },
   "scripts": {
     "start": "react-scripts start",
