--- a/noob-pwa/package.json
+++ b/noob-pwa/package.json
@@ -8,7 +8,8 @@
     "bulma": "0.4.2"
   },
   "devDependencies": {
-    "react-scripts": "1.0.7"
+    "react-scripts": "1.0.7",
+    "workbox-cli": "^1.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
