--- a/noob-pwa/public/manifest.json
+++ b/noob-pwa/public/manifest.json
@@ -40,6 +40,6 @@
   ],
   "start_url": "./index.html",
   "display": "standalone",
-  "theme_color": "#483075", // #483075 - Twitch color
+  "theme_color": "#483075",
   "background_color": "#ffffff"
 }
